# ireland-housing-market-analysis

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: Dockerfile  app.py
datasets/ppr/: ppr_2010-01.csv  ppr_2010-02.csv  ppr_2010-03.csv  ppr_2010-04.csv  ppr_2010-05.csv  ppr_2010-06.csv  ppr_2010-07.csv  ppr_2010-08.csv  ppr_2010-09.csv  ppr_2010-10.csv  ppr_2010-11.csv  ppr_2010-12.csv  ppr_2011-01.csv  ppr_2011-02.csv  ppr_2011-03.csv  ppr_2011-04.csv  ppr_2011-05.csv  ppr_2011-06.csv  ppr_2011-07.csv  ppr_2011-08.csv  ppr_2011-09.csv  ppr_2011-10.csv  ppr_2011-11.csv  ppr_2011-12.csv  ppr_2012-01.csv  ppr_2012-02.csv  ppr_2012-03.csv  ppr_2012-04.csv  ppr_2012-05.csv  ppr_2012-06.csv  ppr_2012-07.csv  ppr_2012-08.csv  ppr_2012-09.csv  ppr_2012-10.csv  ppr_2012-11.csv  ppr_2012-12.csv  ppr_2013-01.csv  ppr_2013-02.csv  ppr_2013-03.csv  ppr_2013-04.csv  (+156 more)
datasets/rtb/: RTBRIQ325-Figure-1.xlsx  RTBRIQ325-Figure-3.xlsx
db/: schema.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Card.jsx  CountyList.jsx  (+4 more)
nginx/: Dockerfile  entrypoint.sh  nginx.conf
scripts/: cpi_clean_transform.py  cpi_download.py  housing_combined_clean_transform.py  loader.py  ppr_clean_transform.py  ppr_download.py  ppr_enrichment.py  rtbi_clean_transform.py  rtbi_download.py  run_all.py  run_cpi.py  run_housing_combined.py  run_ppr.py  run_ppr_aggregated.py  run_rtb.py
tests/: test_integration.py  test_transformers.py
(+2 files in other folders)
